# repo-refreshed

./: Files  PKGBUILD  README.md
VideoDecodeStats/: LOG
akonadi/: .SRCINFO  PKGBUILD
akregator/: .SRCINFO  PKGBUILD
ark/: .SRCINFO  PKGBUILD
audiocd-kio/: PKGBUILD
baloo/: .SRCINFO  D15939.diff  D28400.patch  D28401.patch  PKGBUILD
baloo-widgets/: .SRCINFO  D16872.diff  PKGBUILD
bluedevil/: .SRCINFO  PKGBUILD
breeze/: .SRCINFO  PKGBUILD
breeze-gtk/: .SRCINFO  PKGBUILD
breeze-icons/: .SRCINFO  PKGBUILD
cups/: 0001-cups-fixes.patch  PKGBUILD
digikam/: .SRCINFO  PKGBUILD
discover/: .SRCINFO  PKGBUILD
dkms/: .SRCINFO  PKGBUILD
dolphin/: .SRCINFO  D26362.patch  D28370.patch  PKGBUILD  kdebug-362834.patch  kdebug-420512.patch
dolphin-plugins/: .SRCINFO  PKGBUILD
drkonqi/: .SRCINFO  PKGBUILD
elisa/: .SRCINFO  PKGBUILD
ffmpegthumbs/: .SRCINFO  PKGBUILD
filelight/: .SRCINFO  PKGBUILD
frameworkintegration/: .SRCINFO  PKGBUILD
gwenview/: .SRCINFO  D28342.patch  D28343.patch  D28344.patch  D28345.patch  D28346.patch  D28480.patch  PKGBUILD
kaccounts-integration/: .SRCINFO  PKGBUILD
kactivities-stats/: PKGBUILD  kdebug-390774.patch
kactivitymanagerd/: .SRCINFO  PKGBUILD
kaffeine/: PKGBUILD
kapidox/: PKGBUILD
karchive/: PKGBUILD
kate/: .SRCINFO  D16641.diff  D16830.diff  D17297.diff  D17318.diff  PKGBUILD  kdebug-397913.patch  merge_requests-100.patch  merge_requests-105.patch  merge_requests-110.patch
kauth/: .SRCINFO  PKGBUILD
kcalendarcore/: .SRCINFO  PKGBUILD
kcmutils/: .SRCINFO  PKGBUILD
kconfig/: .SRCINFO  PKGBUILD
kconfigwidgets/: .SRCINFO  PKGBUILD
kcoreaddons/: .SRCINFO  PKGBUILD
src/kio-extras-18.12.0/nfs/: CMakeLists.txt
(+1396 files in other folders)
